fix(frontend): printing styles DEV-375 (#5879)
### 📣 Summary

Fix issues with styles while printing.

### 📖 Description

Now all Project related routes should be printable without data being
cropped out. The only issue still prevaling is printing horizontally
huge tables from Project → Data. In such case it is advised to change
the amount of columns being displayed before printing and using
landscape orientation of paper.

### 💭 Notes

Changes here:
- Multiple different `@media print` fixes, mainly bringing back previous
styles that were not being used anymore due to specificity change
(during Mantine introduction?)
- Added some styles that undo text trimming - to ensure whole data is
being displayed in table cell
- Added missing `key` in `RepeatGroupCell.tsx`

### 👀 Preview steps

1. ℹ️ have an account and a project with multiple submissions, ideally
with many columns
2. go through Project routes, on each checking out print styles
3. 🔴 [on main] notice that many print styles don't work
4. 🟢 [on PR] notice that styles are better

Also ensure the issue steps described in
https://linear.app/kobotoolbox/issue/DEV-375/issue-printing-a-submission
are fixed now.

--- a/jsapp/scss/mixins.scss
+++ b/jsapp/scss/mixins.scss
@@ -39,6 +39,12 @@
   text-overflow: ellipsis;
 }
 
+@mixin undoTextEllipsis() {
+  overflow: visible;
+  white-space: wrap;
+  overflow-wrap: break-word;
+}
+
 // Use this for dropdowns and menus
 @mixin floatingRoundedBox() {
   background-color: colors.$kobo-white;
